--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
+.form{
+  border: 7px solid orange;
+}
+
+.flexi-form{
+  text-align: center; 
+}
+
+.message-info{
   text-align: center;
+  padding-top: 100px;
+  font-weight: bold;
+  font-size: 30px;
+  color: green;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.person-name{
+  padding: 20px 500px 20px;
+  font-size: 25px;
+} 
+
+.person-name_value{
+  font-size: 15px;
+  height: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.person-city{
+  padding: 20px 500px 20px;
+  font-size: 25px;
+  height: 25px;  
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.person-dropdown{
+  width: 160px;
+  height: 25px;
+  font-size: 15px;
 }
 
-.App-link {
-  color: #61dafb;
+.submitBtn{
+  color: lightblue;
+  margin: auto;
+  padding-top: 25px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn{
+  background-color: lightskyblue;
+  border-radius: 5px;
+  height: 35px;
+  width: 100px;
 }
